<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="5dp"
        android:gravity="center"
        android:background="@color/title_bg"
        android:textColor="@color/title_text"
        android:text="@string/title"
        android:id="@+id/textView" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/title_shadow"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cat"
                style="@style/GroupButton"
                android:text="@string/button_cat" />

            <Button
                android:id="@+id/button_thing1"
                style="@style/GroupButton"
                android:text="@string/button_thing1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_thing2"
                style="@style/GroupButton"
                android:text="@string/button_thing2" />

            <Button
                android:id="@+id/button_thingamajigger"
                style="@style/GroupButton"
                android:text="@string/button_thingamajigger" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sally"
                style="@style/GroupButton"
                android:text="@string/button_sally" />

            <Button
                android:id="@+id/button_nick"
                style="@style/GroupButton"
                android:text="@string/button_nick" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dr_seuss"
                style="@style/SingleButton"
                android:text="@string/button_dr_seuss" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
